# extreme-blend

./: .gitignore
client/: .gitignore  CMakeLists.txt  Makefile  main.cpp  meson.build
client/source/: main.cpp
client/test/: compositor.js  dev01.cpp  dev02.cpp  dev03.cpp  dev04.cpp  dev05.cpp  dev06.cpp  dev06s.cpp  dev07.cpp  dev08.cpp  dev09.cpp  dev10.cpp  dev11.cpp  dev12.cpp  dev13.cpp  dev_client.cpp  main.cpp  simple_client.cpp  test.cpp
compositor/: .gitignore  (+1 more)
linux/: CMakeLists.txt  Makefile  README.txt  main.cpp  meson.build
linux/source/: egl.cpp  main.cpp  reflector.cpp  surface.cpp  toplevel.cpp
linux/test/: test.cpp
reflector/: CMakeLists.txt
reflector/include/: ultimate-desktop.h
reflector/include/extreme-blend/: reflector.h
reflector/next/: Cargo.toml
reflector/source/: Makefile  compositor.cpp  compositor.h  egl.cpp  main.cpp  reflector.cpp  shell-surface.cpp  shell.cpp  shell.h  surface.cpp  surface.h  toplevel.cpp  toplevel.h  zxdg_shell_v6.cpp  zxdg_shell_v6.h  zxdg_surface_v6.cpp  zxdg_surface_v6.h
reflector/test/: reflector_test.cpp  simple_test.cpp  test.cpp
reflex/: .gitignore  Cargo.toml
reflex/src/: legacy.rs  main.rs  protocol.rs  uds.rs
reflex/src/protocol/: codec.rs  connection_stream.rs  event.rs  event_sink.rs  fd_drop.rs  raw_event.rs  request.rs  request_stream.rs  resource.rs  session.rs  wayland.rs  wl_resource.rs  xdg_shell.rs
reflex/src/protocol/wayland/: wl_buffer.rs  wl_callback.rs  wl_compositor.rs  wl_data_device.rs  wl_data_device_manager.rs  wl_data_offer.rs  wl_data_source.rs  wl_display.rs  wl_keyboard.rs  wl_output.rs  wl_pointer.rs  wl_region.rs  wl_registry.rs  wl_seat.rs  wl_shell.rs  wl_shell_surface.rs  wl_shm.rs  wl_shm_pool.rs  wl_subcompositor.rs  wl_subsurface.rs  wl_surface.rs  wl_touch.rs
reflex/src/protocol/wayland/wl_buffer/: events.rs  lib.rs
reflex/src/protocol/wayland/wl_callback/: events.rs  lib.rs
reflex/src/protocol/wayland/wl_compositor/: lib.rs
reflex/src/protocol/wayland/wl_data_device/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_data_device_manager/: enums.rs  lib.rs
reflex/src/protocol/wayland/wl_data_offer/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_data_source/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_display/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_keyboard/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_output/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_pointer/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_region/: lib.rs
reflex/src/protocol/wayland/wl_registry/: events.rs  lib.rs
reflex/src/protocol/wayland/wl_seat/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_shell/: lib.rs
reflex/src/protocol/wayland/wl_shell_surface/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_shm/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_shm_pool/: lib.rs
reflex/src/protocol/wayland/wl_subcompositor/: enums.rs  lib.rs
reflex/src/protocol/wayland/wl_subsurface/: enums.rs  lib.rs
reflex/src/protocol/wayland/wl_surface/: enums.rs  events.rs  lib.rs
reflex/src/protocol/wayland/wl_touch/: events.rs  lib.rs
reflex/src/protocol/xdg_shell/: xdg_popup.rs  xdg_positioner.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs
reflex/src/protocol/xdg_shell/xdg_popup/: enums.rs  events.rs  lib.rs
reflex/src/protocol/xdg_shell/xdg_positioner/: enums.rs  lib.rs
reflex/src/protocol/xdg_shell/xdg_surface/: enums.rs  events.rs  lib.rs
reflex/src/protocol/xdg_shell/xdg_toplevel/: enums.rs  events.rs  lib.rs
reflex/src/protocol/xdg_shell/xdg_wm_base/: enums.rs  events.rs  lib.rs
scan/: scan.rb  (+2 more)
vision/: .gitignore  Cargo.toml  ExtremeBlend.Vision.sln  Vision.sln
vision/ExtremeBlend.Vision/: ExtremeBlend.Vision.fsproj  Program.fs
vision/Grpc/: Class1.cs  Grpc.csproj
vision/Vision/: AssemblyInfo.fs  Program.fs  Vision.fsproj  packages.config
vision/Vision.Grpc/: Vision.Grpc.csproj
vision/Vision.Grpc/Protos/: vision.proto
vision/src/: main.rs  protocol.rs  server_socket.rs  session_state.rs
vision/src/protocol/: codec.rs  resource.rs  session.rs  wayland.rs  wayland_codec.rs  wayland_event.rs  wayland_request.rs  wl_resource.rs  xdg_shell.rs
vision/src/protocol/wayland/: wl_buffer.rs  wl_compositor.rs  wl_data_device.rs  wl_data_device_manager.rs  wl_data_offer.rs  wl_data_source.rs  wl_display.rs  wl_keyboard.rs  wl_output.rs  wl_region.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_shm_pool.rs  wl_subsurface.rs  wl_surface.rs
vision/src/protocol/wayland/wl_buffer/: events.rs  lib.rs
vision/src/protocol/wayland/wl_callback/: events.rs  lib.rs
vision/src/protocol/wayland/wl_compositor/: lib.rs
vision/src/protocol/wayland/wl_data_device/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_data_device_manager/: enums.rs  lib.rs
vision/src/protocol/wayland/wl_data_offer/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_data_source/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_display/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_keyboard/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_output/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_pointer/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_region/: lib.rs
vision/src/protocol/wayland/wl_registry/: events.rs  lib.rs
vision/src/protocol/wayland/wl_seat/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_shm/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_shm_pool/: lib.rs
vision/src/protocol/wayland/wl_subcompositor/: enums.rs  lib.rs
vision/src/protocol/wayland/wl_subsurface/: enums.rs  lib.rs
vision/src/protocol/wayland/wl_surface/: enums.rs  events.rs  lib.rs
vision/src/protocol/wayland/wl_touch/: events.rs  lib.rs
vision/src/protocol/xdg_shell/: xdg_popup.rs  xdg_positioner.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs
vision/src/protocol/xdg_shell/xdg_popup/: enums.rs  events.rs  lib.rs
(+20 files in other folders)
