[package]
name = "ultimate-desktop-vision"
version = "0.1.0"
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
edition = "2018"
build = "build.rs"

[dependencies]
mio = "*"
tokio = "*"
tokio-io = "*"
futures = "*"
byteorder = "*"
bytes = "*"
winapi = { version = "*", features = [
    "impl-default",
    "minwindef",
    "winsock2",
    "ws2def",
] }
